..... busy with validation

--- a/School.UI/Views/StudentAttendance/_ViewStudentAttendance.cshtml
+++ b/School.UI/Views/StudentAttendance/_ViewStudentAttendance.cshtml
@@ -103,7 +103,7 @@
                                                 @Html.DisplayFor(model => item.StudentId)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(model => item.FirstName)  @Html.DisplayFor(model => item.LastName)
+                                                @Html.DisplayFor(model => item.FirstName)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(model => item.LastName)
