--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
             height: calc(100vh - 60px);
         }
 
-        .layout-wrapper .logEasySex24 {
+        .layout-wrapper .logEasy24 {
             position: absolute;
             box-shadow: 1px 1px 41px 1px red;
             border-color: orangered;
@@ -477,10 +477,10 @@
 <body id="layoutBodyId" style="background-color:rgb(59, 90, 108);">
     <div id="layout-page" class="layout-wrapper col-sm-12 rm-pd">
 
-        <div id="layoutLeftId" class="layoutLeft-wrapper startEasySex isOpen rm-pd" style="display: inline-block;overflow:hidden">
+        <div id="layoutLeftId" class="layoutLeft-wrapper startEasy isOpen rm-pd" style="display: inline-block;overflow:hidden">
 
             <div class="layoutLeft-header rm-pd">
-                <span class="logEasySex24" style="background-color:orange;color:white; min-height:30px;width:80px">mySchool</span>
+                <span class="logEasy24" style="background-color:orange;color:white; min-height:30px;width:80px">mySchool</span>
             </div>
             <div id="menuHolderId" class="PartialLayoutMenu layoutLeft-body desktopMenu rm-pd" style="border:0px solid red;">
 
