--- a/School.UI/Content/views/WelcomEmail.cshtml
+++ b/School.UI/Content/views/WelcomEmail.cshtml
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome To EasySex24.com</title>
+  <title>Welcome To Easy24.com</title>
 </head>
 
 
@@ -12,14 +12,14 @@
         Hi Sphijo
     </p>
     <p style="padding-left:10px;padding-right:10px;color:orange">
-        Thanks for Signing up to <a href="http://easysex24.com">Our Site</a>
+        Thanks for Signing up to <a href="http://easy24.com">Our Site</a>
     </p>
     <p style="padding-left:10px;padding-right:10px;color:orange">
 
         Please confirm your account by clicking this <a href="@ViewBag.Link">Link</a>
     </p>
     <p style="padding-left:10px;padding-right:10px;">
-        <i>EasySex24</i>
+        <i>Easy24</i>
     </p>
 
 </body>
