--- a/School.UI/Views/Shared/_LayoutRightHeader.cshtml
+++ b/School.UI/Views/Shared/_LayoutRightHeader.cshtml
@@ -95,13 +95,13 @@
             box-shadow: 0px 2px 0px 0px rgba(255, 165, 0,1);
         }
 
-    #layoutRightHeader-page .div-logEasySex24-small {
+    #layoutRightHeader-page .div-logEasy24-small {
         min-height: 90px;
         max-height: 90px;
         display: inline-block;
     }
 
-    .logEasySex24-small {
+    .logEasy24-small {
         position: absolute;
         box-shadow: 1px 1px 21px 1px red;
         border-color: orangered;
