changing app theme ...

--- a/School.UI/Content/Theme/appbackground.css
+++ b/School.UI/Content/Theme/appbackground.css
@@ -1,4 +1,7 @@
-﻿.app-bg{
+﻿
+
+/*
+{.app-bg{
     background-color: rgb(23, 58, 134);    
 }
 .app-left-bg {
@@ -166,3 +169,5 @@
 .popup-bd {
     border:solid thin silver;
 }
+
+*/
