--- a/School.UI/Content/Theme/layoutPage/sidebar-menu.css
+++ b/School.UI/Content/Theme/layoutPage/sidebar-menu.css
@@ -3,7 +3,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    background-color: rgb(59, 90, 108);
+    /*background-color: rgb(59, 90, 108);*/
     /*background-color: rgb(232, 232, 236);*/
 }
 
