--- a/School.UI/Views/Home/Index.cshtml
+++ b/School.UI/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
         #HomeBodyGallery #partialHolder {
         }
 
-    #PopupBodyChildOne, #PopupBodyChildTwo, #PopupBodyChildThree {
+    #popupChildOne, #popupChildTwo, #popupChildThree {
         position: absolute;
         border: 0px solid red;
         min-height: 240px;
@@ -80,22 +80,22 @@
         display: inline-block;
     }
 
-    #PopupBodyChildOne {
+    #popupChildOne {
         z-index: 101;
     }
 
 
-        #PopupBodyChildOne #partialHolder {
+        #popupChildOne #partialHolder {
             max-height: calc(100vh - 80px);
             overflow-y: scroll;
             overflow-x: hidden;
         }
 
-    #PopupBodyChildTwo {
+    #popupChildTwo {
         z-index: 201;
     }
 
-    #PopupBodyChildThree {
+    #popupChildThree {
         z-index: 301;
     }
 
@@ -570,7 +570,7 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
             </div>
         </div>
 
-        <div id="PopupBodyChildOne" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
+        <div id="popupChildOne" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
             <div id="divParentId" class="divParent col-xs-12">
                 <button id="btnCloseGeneric" class="btnClosePopup">
                     X
@@ -588,7 +588,7 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
             </div>
         </div>
 
-        <div id="PopupBodyChildTwo" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
+        <div id="popupChildTwo" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
             <div id="divParentId" class="divParent col-xs-12">
                 <button id="btnCloseGeneric" class="btnClosePopup">
                     X
@@ -605,7 +605,7 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
                 </div>
             </div>
         </div>
-        <div id="PopupBodyChildThree" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
+        <div id="popupChildThree" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
             <div id="divParentId" class="divParent col-xs-12">
                 <button id="btnCloseGeneric" class="btnClosePopup">
                     X
@@ -622,7 +622,7 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
                 </div>
             </div>
         </div>
-        @*<div id="PopupBodyChildFour" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
+        @*<div id="popupChildFour" class="childBodyPage home-boxShadow_not_used slide-messagePopup">
             <div id="divParentId" class="divParent col-xs-12">
                 <button id="btnCloseGeneric" class="btnClosePopup">
                     X
