--- a/School.UI/Views/SubjectResult/_UpdateSubjectResult.cshtml
+++ b/School.UI/Views/SubjectResult/_UpdateSubjectResult.cshtml
@@ -76,7 +76,7 @@
 
         var pageObj = {
             closePage: {
-                pageId: ['PopupBodyChildTwo']
+                pageId: ['popupChildTwo']
             }
         };
         classControllerHelper.getMessage(response, pageObj);
