--- a/School.UI/Views/Shared/_LayoutRightHeader.cshtml
+++ b/School.UI/Views/Shared/_LayoutRightHeader.cshtml
@@ -252,16 +252,16 @@
             if (popupBodyID === "PopupBodyUserLogin") {
                 $('#PopupOverlayLogIn').css("display", "none");
             }
-            else if (popupBodyID === "PopupBodyChildOne") {
+            else if (popupBodyID === "popupChildOne") {
                 $('#PopupOverlayChildOne').css("display", "none");
             }
-            else if (popupBodyID === "PopupBodyChildTwo") {
+            else if (popupBodyID === "popupChildTwo") {
                 $('#PopupOverlayChildTwo').css("display", "none");
             }
-            else if (popupBodyID === "PopupBodyChildThree") {
+            else if (popupBodyID === "popupChildThree") {
                 $('#PopupOverlayChildThree').css("display", "none");
             }
-            else if (popupBodyID === "PopupBodyChildChat") {
+            else if (popupBodyID === "popupChildChat") {
                 $('#PopupOverlayChildChat').css("display", "none");
             }
             else {
