--- a/School.UI/Views/TeacherRegister/_ViewTeacherInfor.cshtml
+++ b/School.UI/Views/TeacherRegister/_ViewTeacherInfor.cshtml
@@ -41,7 +41,7 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
         }
 
-    #Home-Container #PopupBodyChildOne #partialHolder{
+    #Home-Container #popupChildOne #partialHolder{
         background-color:white;
     }
 </style>
