... busy updating code ...

--- a/School.UI/Views/LogIn/_LoginPage.cshtml
+++ b/School.UI/Views/LogIn/_LoginPage.cshtml
@@ -82,9 +82,9 @@
             $('#basePartialHolder').css("display", "block");
             classControllerHelper.callController(pageObj);
 
-            /* var partialHomeHolder = "#HomeBodyGallery";*/
+            /* var partialHomeHolder = "#homePage";*/
             $('#basePartialHolder').css("display", "block");
-            $('#HomeBodyGallery').css("display", "none");
+            $('#homePage').css("display", "none");
         })();
 
     }
