--- a/School.UI/Views/Shared/_LayoutRightHeader.cshtml
+++ b/School.UI/Views/Shared/_LayoutRightHeader.cshtml
@@ -175,13 +175,11 @@
 
         <div class="layoutRight-header-bottom col-xs-12" style="border:0px solid red;z-index:1000;">
 
-            <div class="layout-OnOff-div" style="border:0px solid red;">
+            <div class="layout-OnOff-div">
                 <p id="layout-OnOff-icon" class="layout-OnOff-icon fa fa-bars" style="font:20px;color:orange"></p>
             </div>
 
-
-
-            <div id="holder-logIn" class="layout-loginCo" style="border:0px solid red;">
+            <div id="holder-logIn" class="layout-loginCo">
 
                 <div id="divloginCanvas" class="loginCanvas" style="margin-top:-6px;margin-left:-4px;float:left;border:1px solid rgb(82, 109, 129);border-radius:50%;">
                 </div>
