--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -169,82 +169,37 @@
 
     <style>
 
-        #PopupOverlayLogIn {
+        #PopupOverlayLogIn, #PopupOverlayChildOne, #PopupOverlayChildTwo, #PopupOverlayChildThree, #PopupOverlayBusyIcon, #PopupOverlayMessage {
             position: relative;
-            opacity: 0.2;
+            opacity: 0.5;
             width: 100%;
             height: 100%;
             z-index: 600;
             top: 0;
             left: 0;
             position: fixed;
-            /*background-color: black;*/
+            background-color: black;
             display: none;
         }
 
-        #PopupOverlayChildOne {
-            position: relative;
-            opacity: 0.2;
-            width: 100%;
-            height: 100%;
+        #PopupOverlayChildOne, #PopupOverlayChildTwo, #PopupOverlayChildThree, #PopupOverlayBusyIcon, #PopupOverlayMessage {
             z-index: 100;
-            top: 0;
-            left: 0;
-            position: fixed;
-            /*background-color: black;*/
-            display: none;
         }
 
         #PopupOverlayChildTwo {
-            position: relative;
-            opacity: 0.2;
-            width: 100%;
-            height: 100%;
             z-index: 200;
-            top: 0;
-            left: 0;
-            position: fixed;
-            /*background-color: black;*/
-            display: none;
         }
 
         #PopupOverlayChildThree {
-            position: relative;
-            opacity: 0.2;
-            width: 100%;
-            height: 100%;
             z-index: 300;
-            top: 0;
-            left: 0;
-            position: fixed;
-            /*background-color: black;*/
-            display: none;
         }
 
         #PopupOverlayBusyIcon {
-            position: relative;
-            opacity: 0.2;
-            width: 100%;
-            height: 100%;
             z-index: 1000;
-            top: 0;
-            left: 0;
-            position: fixed;
-            /*background-color: black;*/
-            display: none;
         }
 
         #PopupOverlayMessage {
-            position: relative;
-            opacity: 0.2;
-            width: 100%;
-            height: 100%;
             z-index: 1000;
-            top: 0;
-            left: 0;
-            position: fixed;
-            /*background-color: black;*/
-            display: none;
         }
 
         /*.bd-primary {
